main/default/objects/Practice_Management__c/Practice_Management__c.object-meta.xml
<CustomObject>
    <label>Practice Builder</label>
    <nameField>
        <label>Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practice Builder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>