main/default/objects/Practice_Management__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Practice Builder</relationshipLabel>
    <relationshipName>Practice_Builder</relationshipName>
    <type>Lookup</type>
</CustomField>