main/default/objects/Practice_Management__c/fields/Consultation_Medical_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Medical_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Practice Builders (Consultation Medical Assistant)</relationshipLabel>
    <relationshipName>Practice_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>