main/default/objects/Practice_Management__c/fields/Consultation_Nurse__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Nurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Practice Builders (Consultation Nurse)</relationshipLabel>
    <relationshipName>Practice_Managements1</relationshipName>
    <type>Lookup</type>
</CustomField>