main/default/objects/Practice_Management__c/fields/Office_location__c.field-meta.xml
<CustomField>
    <fullName>Office_location__c</fullName>
    <label>Office location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>