main/default/objects/Practice_Management__c/fields/Practice_Email__c.field-meta.xml
<CustomField>
    <fullName>Practice_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>