main/default/objects/Practice_Management__c/fields/Practice_Owner__c.field-meta.xml
<CustomField>
    <fullName>Practice_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Practice Builders (Practice Owner)</relationshipLabel>
    <relationshipName>Practice_Builders</relationshipName>
    <type>Lookup</type>
</CustomField>