main/default/objects/Practice_Management__c/fields/Practice_Phone__c.field-meta.xml
<CustomField>
    <fullName>Practice_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>