main/default/objects/Practice_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Campaign__c</columns>
    <columns>Consultation_Medical_Assistant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>